--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.0.16",
+    "serialize-javascript": "2.1.2",
     "three": "^0.113.2",
     "three.meshline": "^1.2.0",
     "threejs-meshline": "^2.0.9"
