--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,15 @@
 # production
 /build
 
+
+#vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
 # misc
 .DS_Store
 .env.local
