--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-router-dom": "^5.1.3",
     "babylonjs": "^4.0.3",
     "cannon": "schteppe/cannon.js",
+    "d3-format": "^1.4.3",
     "d3-scale": "^3.2.1",
     "emotion-theming": "^10.0.19",
     "gsap": "^3.1.1",
