--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
     "babylonjs": "^4.0.3",
+    "camera-controls": "^1.19.1",
     "cannon": "schteppe/cannon.js",
     "d3-format": "^1.4.3",
     "d3-scale": "^3.2.1",
