--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,7 @@
     "importHelpers": true
   },
 
-  "include": ["./src/**/*.ts", "src/Courses/courseComps/global-definitions.tsx"]
+  "include": ["./src/**/*."],
+
+  "exclude": ["node_modules", "webpack", "jest"]
 }
