--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "acorn": "^6.4.1",
     "camera-controls": "^1.19.1",
     "cannon": "schteppe/cannon.js",
     "d3-format": "^1.4.3",
@@ -56,6 +57,7 @@
     "emotion-theming": "^10.0.19",
     "gsap": "^3.1.1",
     "katex": "^0.11.1",
+    "minimist": "^1.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-reconciler": "^0.24.0",
