--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^3.2.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
