--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^8.0.6",
     "chroma-js": "^2.1.0",
     "css-loader": "^3.2.1",
+    "emotion": "^10.0.27",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
