--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "d3-scale": "^3.2.1",
     "emotion-theming": "^10.0.19",
     "gsap": "^3.1.1",
+    "kind-of": "^6.0.3",
     "minimist": "^1.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
