--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "emotion-theming": "^10.0.19",
     "gsap": "^3.1.1",
     "kind-of": "^6.0.3",
+    "lerp": "^1.0.3",
     "minimist": "^1.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
