--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "bundle": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --open firefox --hot",
-    "build": "webpack --mode production ",
+    "start": "webpack-dev-server --config webpack.dev.js  --open firefox --hot",
+    "build": "webpack --config webpack.prod.js ",
     "check-types": "tsc"
   },
   "author": "kurosh",
@@ -24,22 +24,36 @@
     "@types/d3": "^5.7.2",
     "@types/katex": "^0.11.0",
     "acorn": "^6.4.1",
-    "awesome-typescript-loader": "^5.2.1",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.0.6",
     "chroma-js": "^2.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "csp-html-webpack-plugin": "^4.0.0",
     "css-loader": "^3.2.1",
     "emotion": "^10.0.27",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^5.0.2",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "kind-of": "^6.0.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "minimist": "^1.2.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "raw-loader": "^4.0.1",
+    "rollup-plugin-json": "^4.0.0",
+    "serialize-javascript": "^3.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.1",
+    "terser-webpack-plugin": "^3.0.0",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-immutable": "^6.0.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.23",
@@ -49,14 +63,10 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
     "camera-controls": "^1.19.1",
-    "cannon": "schteppe/cannon.js",
     "d3-format": "^1.4.3",
     "d3-scale": "^3.2.1",
     "emotion-theming": "^10.0.19",
-    "gsap": "^3.1.1",
-    "kind-of": "^6.0.3",
     "lerp": "^1.0.3",
-    "minimist": "^1.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-reconciler": "^0.24.0",
@@ -64,7 +74,6 @@
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.0.16",
-    "serialize-javascript": "2.1.2",
     "three": "^0.113.2",
     "three.meshline": "^1.2.0",
     "threejs-meshline": "^2.0.9"
