--- a/package.json
+++ b/package.json
@@ -1,81 +1,93 @@
 {
-  "name": "play",
-  "version": "1.0.0",
-  "description": "reactTS-Custom",
-  "main": "index.js",
-  "scripts": {
-    "bundle": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config webpack.dev.js  --open firefox --hot",
-    "build": "webpack --config webpack.prod.js ",
-    "check-types": "tsc"
-  },
-  "author": "kurosh",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.4",
-    "@babylonjs/materials": "^4.0.3",
-    "@types/chroma-js": "^1.4.3",
-    "@types/d3": "^5.7.2",
-    "@types/katex": "^0.11.0",
-    "acorn": "^6.4.1",
-    "autoprefixer": "^9.7.6",
-    "babel-loader": "^8.0.6",
-    "chroma-js": "^2.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "csp-html-webpack-plugin": "^4.0.0",
-    "css-loader": "^3.2.1",
-    "emotion": "^10.0.27",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^5.0.2",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "kind-of": "^6.0.3",
-    "mini-css-extract-plugin": "^0.9.0",
-    "minimist": "^1.2.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "raw-loader": "^4.0.1",
-    "rollup-plugin-json": "^4.0.0",
-    "serialize-javascript": "^3.0.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.0.1",
-    "terser-webpack-plugin": "^3.0.0",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-immutable": "^6.0.1",
-    "typescript": "^3.7.3",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
-  },
-  "dependencies": {
-    "@emotion/babel-preset-css-prop": "^10.0.23",
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
-    "@types/react": "^16.9.15",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
-    "camera-controls": "^1.19.1",
-    "d3-format": "^1.4.3",
-    "d3-scale": "^3.2.1",
-    "emotion-theming": "^10.0.19",
-    "lerp": "^1.0.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-reconciler": "^0.24.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-spring": "^8.0.27",
-    "react-three-fiber": "^4.0.16",
-    "three": "^0.113.2",
-    "three.meshline": "^1.2.0",
-    "threejs-meshline": "^2.0.9"
-  }
+    "name": "play",
+    "version": "1.0.0",
+    "description": "reactTS-Custom",
+    "main": "index.js",
+    "scripts": {
+        "bundle": "webpack",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack-dev-server --config webpack.dev.js  --open firefox --hot",
+        "build": "webpack --config webpack.prod.js ",
+        "check-types": "tsc"
+    },
+    "author": "kurosh",
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.7.4",
+        "@babel/plugin-proposal-class-properties": "^7.7.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+        "@babel/preset-env": "^7.7.4",
+        "@babel/preset-react": "^7.7.4",
+        "@babel/preset-typescript": "^7.7.4",
+        "@babylonjs/materials": "^4.0.3",
+        "@types/chroma-js": "^1.4.3",
+        "@types/d3": "^5.7.2",
+        "@types/katex": "^0.11.0",
+        "@typescript-eslint/eslint-plugin": "^2.30.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^2.30.0",
+        "@typescript-eslint/parser": "^2.30.0",
+        "acorn": "^6.4.1",
+        "autoprefixer": "^9.7.6",
+        "babel-loader": "^8.0.6",
+        "chroma-js": "^2.1.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "csp-html-webpack-plugin": "^4.0.0",
+        "css-loader": "^3.2.1",
+        "emotion": "^10.0.27",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-jsdoc": "^24.0.2",
+        "eslint-plugin-no-null": "^1.0.2",
+        "eslint-plugin-prefer-arrow": "^1.2.1",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-react": "^7.19.0",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^5.0.2",
+        "html-loader": "^1.1.0",
+        "html-webpack-plugin": "^3.2.0",
+        "kind-of": "^6.0.3",
+        "mini-css-extract-plugin": "^0.9.0",
+        "minimist": "^1.2.5",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "postcss-loader": "^3.0.0",
+        "prettier": "^2.0.5",
+        "prettier-eslint": "^9.0.1",
+        "raw-loader": "^4.0.1",
+        "rollup-plugin-json": "^4.0.0",
+        "serialize-javascript": "^3.0.0",
+        "source-map-loader": "^0.2.4",
+        "style-loader": "^1.0.1",
+        "terser-webpack-plugin": "^3.0.0",
+        "typescript": "^3.7.3",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.9.0",
+        "webpack-merge": "^4.2.2"
+    },
+    "dependencies": {
+        "@emotion/babel-preset-css-prop": "^10.0.23",
+        "@emotion/core": "^10.0.22",
+        "@emotion/styled": "^10.0.23",
+        "@types/react": "^16.9.15",
+        "@types/react-dom": "^16.9.4",
+        "@types/react-router-dom": "^5.1.3",
+        "camera-controls": "^1.19.1",
+        "d3-format": "^1.4.3",
+        "d3-scale": "^3.2.1",
+        "emotion-theming": "^10.0.19",
+        "immer": "^6.0.3",
+        "lerp": "^1.0.3",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-reconciler": "^0.24.0",
+        "react-router": "^5.1.2",
+        "react-router-dom": "^5.1.2",
+        "react-spring": "^8.0.27",
+        "react-three-fiber": "^4.0.16",
+        "three": "^0.113.2",
+        "three.meshline": "^1.2.0",
+        "threejs-meshline": "^2.0.9",
+        "use-immer": "^0.4.0"
+    }
 }
