--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@babel/core": "^7.7.4",
         "@babel/plugin-proposal-class-properties": "^7.7.4",
         "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+        "@babel/plugin-transform-runtime": "^7.9.6",
         "@babel/preset-env": "^7.7.4",
         "@babel/preset-react": "^7.7.4",
         "@babel/preset-typescript": "^7.7.4",
@@ -24,7 +25,6 @@
         "@types/d3": "^5.7.2",
         "@types/katex": "^0.11.0",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
-        "@typescript-eslint/eslint-plugin-tslint": "^2.30.0",
         "@typescript-eslint/parser": "^2.30.0",
         "acorn": "^6.4.1",
         "autoprefixer": "^9.7.6",
@@ -66,6 +66,7 @@
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
+        "@babel/runtime": "^7.9.6",
         "@emotion/babel-preset-css-prop": "^10.0.23",
         "@emotion/core": "^10.0.22",
         "@emotion/styled": "^10.0.23",
@@ -75,6 +76,7 @@
         "camera-controls": "^1.19.1",
         "d3-format": "^1.4.3",
         "d3-scale": "^3.2.1",
+        "drei": "^0.0.32",
         "emotion-theming": "^10.0.19",
         "immer": "^6.0.3",
         "lerp": "^1.0.3",
@@ -83,7 +85,7 @@
         "react-reconciler": "^0.24.0",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
-        "react-spring": "^8.0.27",
+        "react-spring": "npm:@react-spring/web@9.0.0-rc.3",
         "react-three-fiber": "^4.0.16",
         "three": "^0.113.2",
         "three.meshline": "^1.2.0",
