--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,11 @@ steps:
     yarn build
   displayName: 'yarn install and build'
 
+- task: CopyFiles@2
+  inputs:
+    Contents: 'web.config'
+    TargetFolder: '${build}'
+
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(build)'
