--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
         "@babel/preset-env": "^7.7.4",
         "@babel/preset-react": "^7.7.4",
         "@babel/preset-typescript": "^7.7.4",
-        "@babylonjs/materials": "^4.0.3",
         "@types/chroma-js": "^1.4.3",
         "@types/d3": "^5.7.2",
-        "@types/katex": "^0.11.0",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
         "@typescript-eslint/parser": "^2.30.0",
         "acorn": "^6.4.1",
@@ -42,7 +40,6 @@
         "eslint-plugin-prefer-arrow": "^1.2.1",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.19.0",
-        "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^5.0.2",
         "html-loader": "^1.1.0",
         "html-webpack-plugin": "^3.2.0",
@@ -62,7 +59,7 @@
         "typescript": "^3.7.3",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.11",
-        "ç": "^3.9.0",
+        "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
@@ -74,6 +71,7 @@
         "@types/react-dom": "^16.9.4",
         "@types/react-router-dom": "^5.1.3",
         "camera-controls": "^1.19.1",
+        "d3-ease": "^1.0.6",
         "d3-format": "^1.4.3",
         "d3-scale": "^3.2.1",
         "drei": "^0.0.32",
